--- a/package.json
+++ b/package.json
@@ -1,31 +1,66 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "dependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  },
-  "devDependencies": {
-    "prettier": "2.0.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+    "name": "portail-math-1-sdc",
+    "private": true,
+    "description": "Mathématique secondaire 1",
+    "version": "0.1.0",
+    "scripts": {
+        "build": "gatsby build",
+        "dev": "gatsby develop",
+        "type-check": "tsc --noEmit",
+        "lint": "eslint src",
+        "format": "prettier --write .",
+        "start": "npm run develop",
+        "serve": "gatsby serve",
+        "clean": "gatsby clean",
+        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    },
+    "eslintConfig": {
+        "parser": "@typescript-eslint/parser",
+        "env": {
+            "browser": true
+        },
+        "extends": [
+            "eslint:recommended",
+            "plugin:react/recommended",
+            "plugin:@typescript-eslint/recommended",
+            "prettier",
+            "prettier/@typescript-eslint/recommended"
+        ],
+        "plugins": [
+            "@typescript-eslint",
+            "react"
+        ]
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true,
+        "trailingComma": "all",
+        "endOfLine": "lf"
+    },
+    "dependencies": {
+        "bootstrap": "^4.5.2",
+        "gatsby": "^2.24.47",
+        "gatsby-plugin-react-helmet": "^3.3.10",
+        "react": "^16.12.0",
+        "react-bootstrap": "^1.3.0",
+        "react-dom": "^16.12.0",
+        "react-helmet": "^6.1.0",
+        "react-icons": "^3.11.0"
+    },
+    "devDependencies": {
+        "@types/node": "^14.6.0",
+        "@types/react": "^16.9.46",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-helmet": "^6.1.0",
+        "@typescript-eslint/eslint-plugin": "^3.9.1",
+        "@typescript-eslint/parser": "^3.9.1",
+        "eslint": "^7.7.0",
+        "prettier": "2.0.5",
+        "typescript": "^4.0.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/emgre/portail-math-1-sdc"
+    }
 }
